# matsuzawa-20260202

./: pyproject.toml
.github/workflows/: dev_compile_latex_with_open_code.yml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-flan-t5-small-commonsenseqa/: metrics.json
.research/results/comparative-1-mistral-7b-v0.3-commonsenseqa/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-flan-t5-small-commonsenseqa/: metrics.json
.research/results/proposed-mistral-7b-v0.3-commonsenseqa/: metrics.json
config/: config.yaml
config/runs/: comparative-1-flan-t5-small-commonsenseqa.yaml  comparative-1-mistral-7b-v0.3-commonsenseqa.yaml  proposed-flan-t5-small-commonsenseqa.yaml  proposed-mistral-7b-v0.3-commonsenseqa.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
