[project]
name = "eb-cvar-brachs"
version = "0.1.0"
description = "Empirical-Bayes CVaR-BRaCHS experiments with Hydra"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "transformers>=4.39.0",
  "datasets>=2.18.0",
  "hydra-core>=1.3.2",
  "wandb>=0.16.0",
  "optuna>=3.5.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "tqdm>=4.66.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
